--- a/profile-settings.html
+++ b/profile-settings.html
@@ -20,7 +20,7 @@
         </a>
         <button class="menu" id="menu-opener">menu</button>
     </div>
-    <header class="header header_home">
+    <header class="header">
         <div class="header_top fds-color__bg--fourth">
             <div class="fds-layout-grid fds-align--right fmc-py-2">
                 <ul class="header_top__menu menu_small">
@@ -44,8 +44,10 @@
                     <div class="fds-layout-grid__cell--span-6">
                         <ul class="header_main__menu">
                             <li><a href="./program-rules.html" class="fmc-text-button fmc-type--body1">X-Plan Program Rules</a></li>
-                            <li><a href="./profile-settings.html" class="fmc-text-button fmc-type--body1">Profile Settings</a></li>
+                            <li><a href="./profile-settings.html" class="fmc-text-button fmc-type--body1 active">Profile Settings</a></li>
                             <li><a href="#" class="fmc-text-button fmc-type--body1">Generate PIN</a></li>
+                            <li><a href="./sales-reporting.html" class="fmc-text-button fmc-type--body1">Sales Reporting</a></li>
+                            <li><a href="./marketing-toolkit.html" class="fmc-text-button fmc-type--body1">Marketing Toolkit</a></li>
                         </ul>
                     </div>
                     <div class="fds-layout-grid__cell--span-3 fds-align--right">
