--- a/program-rules.html
+++ b/program-rules.html
@@ -20,7 +20,7 @@
         </a>
         <button class="menu" id="menu-opener">menu</button>
     </div>
-    <header class="header header_home">
+    <header class="header">
         <div class="header_top fds-color__bg--fourth">
             <div class="fds-layout-grid fds-align--right fmc-py-2">
                 <ul class="header_top__menu menu_small">
@@ -43,9 +43,11 @@
                     </div>
                     <div class="fds-layout-grid__cell--span-6">
                         <ul class="header_main__menu">
-                            <li><a href="./program-rules.html" class="fmc-text-button fmc-type--body1">X-Plan Program Rules</a></li>
+                            <li><a href="./program-rules.html" class="fmc-text-button fmc-type--body1 active">X-Plan Program Rules</a></li>
                             <li><a href="./profile-settings.html" class="fmc-text-button fmc-type--body1">Profile Settings</a></li>
                             <li><a href="#" class="fmc-text-button fmc-type--body1">Generate PIN</a></li>
+                            <li><a href="./sales-reporting.html" class="fmc-text-button fmc-type--body1">Sales Reporting</a></li>
+                            <li><a href="./marketing-toolkit.html" class="fmc-text-button fmc-type--body1">Marketing Toolkit</a></li>
                         </ul>
                     </div>
                     <div class="fds-layout-grid__cell--span-3 fds-align--right">
@@ -92,7 +94,7 @@
         </div>
     </footer>
 
-    <script src="/js/scripts.js"></script>
+    <script src="js/scripts.js"></script>
 
 </body>
 </html>
