--- a/profile-settings.html
+++ b/profile-settings.html
@@ -157,14 +157,7 @@
                 </div>
                 <div class="fds-layout-grid__cell--span-1">
                     <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">Country (COUNTRY)</div>
-                    <select name="vehicles" id="vehicle-select" class="fmc-select">
-                        <option value="f150">USA</option>
-                        <option value="escape">Escape</option>
-                        <option value="bronco">Bronco</option>
-                        <option value="edge">Edge</option>
-                        <option value="mache">Mustang Mach-E</option>
-                        <option value="expedition">Expedition</option>
-                    </select>
+                    <input class="fmc-input" type="text" disabled value="USA">
                 </div>
             </div>
 
