Post-review fixes

--- a/dashboard.html
+++ b/dashboard.html
@@ -102,25 +102,25 @@
         </div>
 
         <div class="fds-layout-grid fmc-pt-6 fmc-pb-4">
-            <div class="fds-layout-grid__inner fds-layout-grid__inner_five">
-                <div class="fds-layout-grid__cell--span-1 fds-align--center">
-                    <img src="img/dashboard-ford.svg" alt="" srcset="">
+            <div class="fds-layout-grid__inner fds-layout-grid__inner_five dashboardIcons">
+                <div class="fds-layout-grid__cell--span-1 fds-align--center dashboardIcons__item">
+                    <img src="img/dashboard-sales.svg" alt="" srcset="">
                     <p class="fmc-type--body2">Sales Reporting</p>
                 </div>
-                <div class="fds-layout-grid__cell--span-1 fds-align--center">
-                    <img src="img/dashboard-ford.svg" alt="" srcset="">
+                <div class="fds-layout-grid__cell--span-1 fds-align--center dashboardIcons__item">
+                    <img src="img/dashboard-toolkit.svg" alt="" srcset="">
                     <p class="fmc-type--body2">Marketing Toolkit</p>
                 </div>
-                <div class="fds-layout-grid__cell--span-1 fds-align--center">
+                <div class="fds-layout-grid__cell--span-1 fds-align--center dashboardIcons__item">
                     <img src="img/dashboard-ford.svg" alt="" srcset="">
                     <p class="fmc-type--body2">Ford.com</p>
                 </div>
-                <div class="fds-layout-grid__cell--span-1 fds-align--center">
-                    <img src="img/dashboard-ford.svg" alt="" srcset="">
+                <div class="fds-layout-grid__cell--span-1 fds-align--center dashboardIcons__item">
+                    <img src="img/dashboard-lincoln.svg" alt="" srcset="">
                     <p class="fmc-type--body2">Lincoln.com</p>
                 </div>
-                <div class="fds-layout-grid__cell--span-1 fds-align--center">
-                    <img src="img/dashboard-ford.svg" alt="" srcset="">
+                <div class="fds-layout-grid__cell--span-1 fds-align--center dashboardIcons__item">
+                    <img src="img/dashboard-recognition.svg" alt="" srcset="">
                     <p class="fmc-type--body2">Ford Recognition Programs</p>
                 </div>
             </div>
