--- a/profile-settings.html
+++ b/profile-settings.html
@@ -92,12 +92,8 @@
                     <p class="fmc-type--content1 fmc-type--bold fmc-mb-3">Major Indicators</p>
                     <p class="fmc-type--body1 fmc-type--bold fmc-mb-1">Employee Count (US):</p>
                     <p class="fmc-type--body1 fmc-mb-3">200</p>
-                    <p class="fmc-type--body1 fmc-type--bold fmc-pt-1">Employee Count (CAN):</p>
+                    <p class="fmc-type--body1 fmc-type--bold fmc-pt-1">Number of Site Locations (US):</p>
                     <p class="fmc-type--body1 fmc-mb-3">3</p>
-                    <p class="fmc-type--body1 fmc-type--bold fmc-pt-1">Employee Count (CAN):</p>
-                    <p class="fmc-type--body1 fmc-mb-3">3</p>
-                    <p class="fmc-type--body1 fmc-type--bold fmc-pt-1">Employee Count (CAN):</p>
-                    <p class="fmc-type--body1">1</p>
                 </div>
             </div>
 
@@ -261,17 +257,10 @@
                     <input class="fmc-input" type="text" placeholder="200">
                 </div>
                 <div class="fds-layout-grid__cell--span-3">
-                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">Employee Count - CAN (EMP_COUNT_CAN)</div>
-                    <input class="fmc-input" type="text" placeholder="2">
-                </div>
-                <div class="fds-layout-grid__cell--span-3">
                     <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2"># Site Locations - US (NO_SITE)</div>
                     <input class="fmc-input" type="text" placeholder="3">
                 </div>
-                <div class="fds-layout-grid__cell--span-3">
-                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2"># Site Locations - Canada (NO_SITE_CAN)</div>
-                    <input class="fmc-input" type="text" placeholder="1">
-                </div>
+                <div class="fds-layout-grid__cell--span-6"></div>
                 <div class="fds-layout-grid__cell--span-6">
                     <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">Does Company have a Facebook page? If yes, please enter URL (FACEBOOK_FLAG)</div>
                     <input class="fmc-input" type="text">
@@ -287,18 +276,6 @@
                 <div class="fds-layout-grid__cell--span-6">
                     <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">URL where X-Plan Program is being advertised to employees/members of company</div>
                     <input class="fmc-input" type="text">
-                </div>
-                <div class="fds-layout-grid__cell--span-3">
-                    <div class="fmc-type--content2 fds-color__text--gray3 fmc-mb-2">Enrollment Rationale (ENROLL_RATIONALE)</div>
-                    <select name="vehicles" id="vehicle-select" class="fmc-select">
-                        <option value="">Select</option>
-                        <option value="f150">Alabama</option>
-                        <option value="escape">Escape</option>
-                        <option value="bronco">Bronco</option>
-                        <option value="edge">Edge</option>
-                        <option value="mache">Mustang Mach-E</option>
-                        <option value="expedition">Expedition</option>
-                    </select>
                 </div>
             </div>
 
